[project]
name = "vulnrelay"
version = "0.4.2"
description = "Run vulnerabilities scanner(s) and sync findings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.19.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[dependency-groups]
test = [
    "pytest",
    "pytest-watcher",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-socket",
    "pytest-xdist",
    "pytest-subprocess>=1.5.2",
    "pytest-responses>=0.5.1",
    "responses>=0.25.3",
    "freezegun",
    "faker>=30.8.1",
]
format = [
    "ruff",
]
lint = [
    "ruff",
    "pre-commit",
    "codespell",
]
type_check = [
    "mypy",
    "types-requests>=2.32.0.20241016",
]
dev = [
    "pre-commit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "S",
    "TCH005",
]
ignore = [
    "S101", "S108", "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src:tests"
strict = true
ignore_missing_imports = true
exclude = [".venv"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_subclassing_any = false
